force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>For payments associated with opportunities.</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>P-{YYYY}/{0}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>