force-app/main/default/objects/Payment__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A que orçamento está relacionado?</inlineHelpText>
    <label>Orçamento</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>