force-app/main/default/objects/Payment__c/fields/Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date__c</fullName>
    <inlineHelpText>When the money entered.</inlineHelpText>
    <label>Entry Date</label>
    <type>Date</type>
</CustomField>