force-app/main/default/objects/Payment__c/fields/Invoice_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Description__c</fullName>
    <formula>Opportunity__r.Invoice_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoice description format. If there is more than one invoice for the same opportunity, please add &quot;x / total&quot; (example: &quot;3 / 4&quot; for the third of four invoices).</inlineHelpText>
    <label>Invoice Description</label>
    <type>Text</type>
</CustomField>