force-app/main/default/objects/Payment__c/fields/Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_ID__c</fullName>
    <label>Invoice ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>