force-app/main/default/objects/Payment__c/fields/Invoice_Obs__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Obs__c</fullName>
    <formula>Opportunity__r.Invoice_Obs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To insert in Invoice Observations</inlineHelpText>
    <label>Invoice Obs</label>
    <type>Text</type>
</CustomField>