force-app/main/default/objects/Payment__c/fields/Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sent__c</fullName>
    <label>Invoice Sent Date</label>
    <type>Date</type>
</CustomField>