force-app/main/default/objects/Payment__c/fields/Payment_TOTAL__c.field-meta.xml
<CustomField>
    <fullName>Payment_TOTAL__c</fullName>
    <formula>Payment_Amount__c + VAT_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment (TOTAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>