force-app/main/default/objects/Payment__c/fields/Send_Invoices_to__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoices_to__c</fullName>
    <formula>Opportunity__r.Send_Invoices_to__r.FirstName &amp;&quot; &quot;&amp;  Opportunity__r.Send_Invoices_to__r.LastName &amp;&quot; &lt;&quot;&amp;Opportunity__r.Send_Invoices_to__r.Email&amp;&quot;&gt;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact indicated on opportunity.</inlineHelpText>
    <label>Send Invoices to</label>
    <type>Text</type>
</CustomField>