force-app/main/default/objects/Payment__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pledged</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
                <isActive>false</isActive>
                <label>Missing</label>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
                <isActive>false</isActive>
                <label>Withdrawn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>