force-app/main/default/objects/Payment__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Este pagamento está relacionado com que movimento?</inlineHelpText>
    <label>Movimento</label>
    <referenceTo>Transactions__c</referenceTo>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>