force-app/main/default/objects/Payment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vendas</fullName>
                <default>true</default>
                <label>Vendas</label>
            </value>
            <value>
                <fullName>Subsídios à exploração</fullName>
            </value>
            <value>
                <fullName>Investimento sócios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>