force-app/main/default/objects/Payment__c/fields/VAT_amount__c.field-meta.xml
<CustomField>
    <fullName>VAT_amount__c</fullName>
    <formula>IF(VAT_percentage__c &gt; 0,  Payment_Amount__c * VAT_percentage__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT (€)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>