force-app/main/default/objects/Payment__c/fields/VAT_percentage__c.field-meta.xml
<CustomField>
    <fullName>VAT_percentage__c</fullName>
    <defaultValue>0.23</defaultValue>
    <label>VAT (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>