force-app/main/default/objects/Payment__c/listViews/Invoiced_This_Month.listView-meta.xml
<ListView>
    <fullName>Invoiced_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Invoice_Sent__c</columns>
    <columns>Invoice_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Sent__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Scheduled_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Invoiced - This Month</label>
</ListView>