force-app/main/default/objects/Payment__c/listViews/LTIMO_M_S.listView-meta.xml
<ListView>
    <fullName>LTIMO_M_S</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Stage__c</columns>
    <columns>Entry_Date__c</columns>
    <columns>Payment_TOTAL__c</columns>
    <columns>Invoice_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entry_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>ÚLTIMO MÊS</label>
</ListView>