force-app/main/default/objects/Payment__c/listViews/Pagamento_concretizados.listView-meta.xml
<ListView>
    <fullName>Pagamento_concretizados</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Entry_Date__c</columns>
    <columns>Transaction__c</columns>
    <columns>Budget__c</columns>
    <columns>Payment_TOTAL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>Entry_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Pagamento concretizados</label>
</ListView>