force-app/main/default/objects/Payment__c/listViews/Pagamentos_Mes_Atual.listView-meta.xml
<ListView>
    <fullName>Pagamentos_Mes_Atual</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Invoice_Sent__c</columns>
    <columns>Invoice_ID__c</columns>
    <columns>Stage__c</columns>
    <columns>Payment_TOTAL__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Entry_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scheduled_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Pagamentos - Mês Atual</label>
</ListView>