force-app/main/default/objects/Payment__c/listViews/Pagamentos_Pendentes.listView-meta.xml
<ListView>
    <fullName>Pagamentos_Pendentes</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>Payment_TOTAL__c</columns>
    <columns>Invoice_Sent__c</columns>
    <columns>Invoice_ID__c</columns>
    <columns>Entry_Date__c</columns>
    <columns>Send_Invoices_to__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scheduled_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>Invoice_Sent__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Pending</label>
</ListView>