force-app/main/default/objects/Payment__c/listViews/Pagamentos_Realizados_Mas_Anterior.listView-meta.xml
<ListView>
    <fullName>Pagamentos_Realizados_Mas_Anterior</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Invoice_Sent__c</columns>
    <columns>Stage__c</columns>
    <columns>Payment_TOTAL__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Entry_Date__c</columns>
    <columns>Budget__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scheduled_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Pagamentos - Mês Anterior</label>
</ListView>