force-app/main/default/objects/Payment__c/listViews/To_validate.listView-meta.xml
<ListView>
    <fullName>To_validate</fullName>
    <columns>NAME</columns>
    <columns>Validated__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_TOTAL__c</columns>
    <columns>Invoice_ID__c</columns>
    <columns>Invoice_Sent__c</columns>
    <columns>VAT_percentage__c</columns>
    <columns>Send_Invoices_to__c</columns>
    <columns>Invoice_Description__c</columns>
    <columns>Invoice_Obs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Paid,Withdrawn</value>
    </filters>
    <filters>
        <field>Invoice_Sent__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Scheduled_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Validated__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>To validate</label>
</ListView>